[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/atlas/atlas_hud.png" type="Texture" id=1]
[ext_resource path="res://_obs/StatIcons.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )
margin = Rect2( -2, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )
margin = Rect2( -2, 1, 0, 0 )

[node name="StatIcons" type="HBoxContainer"]
margin_right = 36.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 8
custom_constants/separation = -1
script = ExtResource( 2 )
icon_texture = SubResource( 147 )

[node name="StatIcon" type="Control" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 0

[node name="OffIcon" type="TextureRect" parent="StatIcon"]
modulate = Color( 1, 1, 1, 0.313726 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="OnIcon" type="TextureRect" parent="StatIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="StatIcon2" type="Control" parent="."]
margin_left = 31.0
margin_right = 63.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 0

[node name="OffIcon" type="TextureRect" parent="StatIcon2"]
modulate = Color( 1, 1, 1, 0.313726 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="OnIcon" type="TextureRect" parent="StatIcon2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="StatIcon3" type="Control" parent="."]
margin_left = 62.0
margin_right = 94.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 0

[node name="OffIcon" type="TextureRect" parent="StatIcon3"]
modulate = Color( 1, 1, 1, 0.313726 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="OnIcon" type="TextureRect" parent="StatIcon3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="StatIcon4" type="Control" parent="."]
margin_left = 93.0
margin_right = 125.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 0

[node name="OffIcon" type="TextureRect" parent="StatIcon4"]
modulate = Color( 1, 1, 1, 0.313726 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="OnIcon" type="TextureRect" parent="StatIcon4"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="StatIcon5" type="Control" parent="."]
margin_left = 124.0
margin_right = 156.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 0

[node name="OffIcon" type="TextureRect" parent="StatIcon5"]
modulate = Color( 1, 1, 1, 0.313726 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true

[node name="OnIcon" type="TextureRect" parent="StatIcon5"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 148 )
expand = true
